RESOLVED FIXED177796
Break out new touch debugging code into separate file
https://bugs.webkit.org/show_bug.cgi?id=177796
Summary Break out new touch debugging code into separate file
Megan Gardner
Reported 2017-10-02 17:15:40 PDT
Break out new touch debugging code into seperate file
Attachments
Patch (26.15 KB, patch)
2017-10-02 17:21 PDT, Megan Gardner
no flags
Patch (26.22 KB, patch)
2017-10-02 18:59 PDT, Megan Gardner
no flags
Patch (26.30 KB, patch)
2017-10-03 10:57 PDT, Megan Gardner
simon.fraser: review+
buildbot: commit-queue-
Archive of layout-test-results from ews112 for mac-elcapitan (2.01 MB, application/zip)
2017-10-03 17:29 PDT, Build Bot
no flags
Megan Gardner
Comment 1 2017-10-02 17:21:43 PDT
Build Bot
Comment 2 2017-10-02 17:23:29 PDT
Attachment 322477 [details] did not pass style-queue: ERROR: Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:47: No space between ^ and block definition. [whitespace/brackets] [4] ERROR: Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:88: No space between ^ and block definition. [whitespace/brackets] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2017-10-02 18:08:28 PDT
Comment on attachment 322477 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322477&action=review > Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:45 > + static dispatch_once_t onceToken = 0; Statics don't need to be initialized to 0, it happens magically!
Megan Gardner
Comment 4 2017-10-02 18:59:07 PDT
Build Bot
Comment 5 2017-10-02 19:01:07 PDT
Attachment 322483 [details] did not pass style-queue: ERROR: Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:47: No space between ^ and block definition. [whitespace/brackets] [4] ERROR: Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:88: No space between ^ and block definition. [whitespace/brackets] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 6 2017-10-03 01:12:32 PDT
Comment on attachment 322483 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322483&action=review > Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:41 > +@implementation HIDDebugTouchWindow I think this would read better as GeneratedTouchesDebugWindow or something (the HID isn't really interesting and may change). > Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:61 > +- (instancetype)init > +{ > + self = [super init]; > + if (!self) > + return nil; > + > + return self; > +} This doesn't nothing; you can remove it. > Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:89 > + UIApplicationRotationFollowingWindow *touchWindow = [[UIApplicationRotationFollowingWindow alloc] init]; Leak, and you overwrite it 2 lines down. > Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:90 > + UIApplicationRotationFollowingControllerNoTouches *viewController = [[UIApplicationRotationFollowingControllerNoTouches alloc] init]; Leak > Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:91 > + touchWindow = [[UIApplicationRotationFollowingWindow alloc] init]; Leak > Tools/WebKitTestRunner/ios/HIDDebugTouchWindow.mm:105 > + [newView setBackgroundColor:[UIColor colorWithRed:1.0-i*.05 green:0.0 blue:1.0-i*.05 alpha:0.5]]; Spaces around operators please.
Megan Gardner
Comment 7 2017-10-03 10:57:52 PDT
Build Bot
Comment 8 2017-10-03 11:00:44 PDT
Attachment 322548 [details] did not pass style-queue: ERROR: Tools/WebKitTestRunner/ios/GeneratedTouchesDebugWindow.mm:47: No space between ^ and block definition. [whitespace/brackets] [4] ERROR: Tools/WebKitTestRunner/ios/GeneratedTouchesDebugWindow.mm:78: No space between ^ and block definition. [whitespace/brackets] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 9 2017-10-03 17:29:27 PDT
Comment on attachment 322548 [details] Patch Attachment 322548 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4746967 New failing tests: workers/wasm-long-compile.html
Build Bot
Comment 10 2017-10-03 17:29:28 PDT
Created attachment 322617 [details] Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Simon Fraser (smfr)
Comment 11 2017-10-04 15:32:39 PDT
Comment on attachment 322548 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322548&action=review > Tools/WebKitTestRunner/ios/GeneratedTouchesDebugWindow.mm:34 > +static const NSUInteger debugTouchDotRadius = 5; > +static const NSUInteger debugTouchDotSize = debugTouchDotRadius * 2; These should be CGFloats > Tools/WebKitTestRunner/ios/GeneratedTouchesDebugWindow.mm:98 > + self.debugTouchViews = [NSArray arrayWithArray:debugViews]; Dunno if it's worth the copy just to make it non-mutable.
Megan Gardner
Comment 12 2018-01-12 17:58:32 PST
Radar WebKit Bug Importer
Comment 13 2018-01-12 17:59:36 PST
Note You need to log in before you can comment on or make changes to this bug.