Tools/TestRunnerShared/spi/UIKitTestSPI.h
@@ -39,6 +39,7 @@
 #import <UIKit/UIWindow_Private.h>
 #import <UIKit/UIDevice_Private.h>
 #import <UIKit/UIScreen_Private.h>
+#import <UIKit/_UIApplicationRotationFollowing.h>
 
 @interface UIKeyboardPredictionView : UIView
 + (UIKeyboardPredictionView *)activeInstance;
@@ -79,6 +80,15 @@
 
 @interface UIScreen ()
 - (void)_setScale:(CGFloat)scale;
+@end
+
+@interface UIApplicationRotationFollowingWindow : UIWindow
+@end
+
+@interface UIApplicationRotationFollowingController : UIViewController
+@end
+
+@interface UIApplicationRotationFollowingControllerNoTouches : UIApplicationRotationFollowingController
 @end
  
 #endif // USE(APPLE_INTERNAL_SDK)
