Tools/WebKitTestRunner/ios/HIDEventGenerator.h
@@ -64,10 +64,11 @@ extern NSString* const HIDEventPhaseMoved;
 extern NSString* const HIDEventPhaseEnded;
 extern NSString* const HIDEventPhaseCanceled;
 
+// Values for touch counts, etc, to keep debug code in sync
+
+extern NSUInteger const HIDMaxTouchCount;
 
 @interface HIDEventGenerator : NSObject
-
-@property (nonatomic, assign) BOOL shouldShowTouches;
 
 + (HIDEventGenerator *)sharedHIDEventGenerator;
 
